TestCases/Errors/Haversine/observations/sst/win_02_obs.spm
obs r15-c6 0.000651762074309893
obs r16-c6 0.000755865169761163
obs r14-c7 0.000890909648395187
obs r15-c7 0.000364360631358691
obs r14-c8 0.00108088483744665
obs r15-c8 0.000681702243461029
obs r13-c9 0.000784888397148428
obs r14-c9 0.000788102194651235
obs r15-c9 0.000337573568357711
obs r14-c10 0.00057593137300976
obs r5-c11 0.00901320168525978
obs r4-c12 0.00232867598137059
obs r9-c12 0.00566666666666667
obs r5-c15 0.00469251336898396
obs r6-c15 0.00497699870462019
obs r11-c19 0.0139285714285714
obs r11-c20 0.0139285714285714
error_value r15-c6 0.2
error_value r16-c6 0.2
error_value r14-c7 0.2
error_value r15-c7 0.2
error_value r14-c8 0.2
error_value r15-c8 0.2
error_value r13-c9 0.2
error_value r14-c9 0.2
error_value r15-c9 0.2
error_value r14-c10 0.2
error_value r5-c11 0.2
error_value r4-c12 0.2
error_value r9-c12 0.2
error_value r5-c15 0.2
error_value r6-c15 0.2
error_value r11-c19 0.2
error_value r11-c20 0.2
